@@ -10,7 +10,8 @@
 
       <h3 tal:define="title view/data/title|nothing;"
           class="tileTitle"
-          tal:condition="title">${title}</h3>
+          tal:condition="title">${title}
+      </h3>
           <div class="tileBody">
             <p tal:condition="not:results"
                class="noResults"
@@ -71,16 +72,6 @@
                 </div>
               </tal:results>
             </ul>
-            <div class="showMore" tal:condition="view/data/show_more">
-              <a href="${collection/absolute_url}"
-                 tal:define="show_more_label view/data/show_more_label|nothing">
-                <span tal:condition="not:show_more_label"
-                      i18n:translate="more_url">More&hellip;</span>
-                <span tal:condition="show_more_label">${show_more_label}</span>
-              </a>
-            </div>
-          </tal:results>
-        </div>
         <div class="showMore" tal:condition="view/data/show_more">
           <a href="${collection/absolute_url}" tal:define="show_more_label view/data/show_more_label|nothing">
             <span tal:condition="not:show_more_label" i18n:translate="more_url">More&hellip;</span>
